@@ -1,6 +1,7 @@
 %-----------------------------------------------------------------------
 % Job configuration for longitudinal VBM
 %-----------------------------------------------------------------------
+warning('off','MATLAB:DELETE:FileNotFound');
 matlabbatch{1}.spm.spatial.realign.estwrite.data = {'<UNDEFINED>'};
 matlabbatch{1}.spm.spatial.realign.estwrite.eoptions.quality = 0.9;
 matlabbatch{1}.spm.spatial.realign.estwrite.eoptions.sep = 4;
@@ -142,66 +143,66 @@ matlabbatch{7}.spm.tools.vbm8.tools.defs.modulate = 0;
 matlabbatch{8}.cfg_basicio.file_move.files(1) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(1).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(1).tgt_spec{1}(1).name = 'filter';
-matlabbatch{8}.cfg_basicio.file_move.files(1).tgt_spec{1}(1).value = 'image';
+matlabbatch{8}.cfg_basicio.file_move.files(1).tgt_spec{1}(1).value = 'mat';
 matlabbatch{8}.cfg_basicio.file_move.files(1).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(1).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(1).sname = 'Realign: Estimate & Reslice: Resliced Images (Sess 1)';
-matlabbatch{8}.cfg_basicio.file_move.files(1).src_exbranch = substruct('.','val', '{}',{2}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(1).src_output = substruct('.','sess', '()',{1}, '.','rfiles');
+matlabbatch{8}.cfg_basicio.file_move.files(1).sname = 'Realign: Estimate & Reslice: Realignment Param File (Sess 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(1).src_exbranch = substruct('.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(1).src_output = substruct('.','sess', '()',{1}, '.','rpfile');
 matlabbatch{8}.cfg_basicio.file_move.files(2) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(2).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(2).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(2).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(2).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(2).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(2).sname = 'Intra-subject bias correction: Bias corrected images (Subj 1)';
-matlabbatch{8}.cfg_basicio.file_move.files(2).src_exbranch = substruct('.','val', '{}',{3}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(2).src_output = substruct('()',{1}, '.','files');
+matlabbatch{8}.cfg_basicio.file_move.files(2).sname = 'Realign: Estimate & Reslice: Mean Image';
+matlabbatch{8}.cfg_basicio.file_move.files(2).src_exbranch = substruct('.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(2).src_output = substruct('.','rmean');
 matlabbatch{8}.cfg_basicio.file_move.files(3) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(3).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(3).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(3).tgt_spec{1}(1).value = 'mat';
 matlabbatch{8}.cfg_basicio.file_move.files(3).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(3).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(3).sname = 'VBM8: Estimate & Write: Seg Params';
-matlabbatch{8}.cfg_basicio.file_move.files(3).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(3).src_output = substruct('.','param', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(3).sname = 'Realign: Estimate & Reslice: Realignment Param File (Sess 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(3).src_exbranch = substruct('.','val', '{}',{2}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(3).src_output = substruct('.','sess', '()',{1}, '.','rpfile');
 matlabbatch{8}.cfg_basicio.file_move.files(4) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(4).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(4).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(4).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(4).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(4).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(4).sname = 'VBM8: Estimate & Write: Deformation Field';
-matlabbatch{8}.cfg_basicio.file_move.files(4).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(4).src_output = substruct('()',{1}, '.','fordef', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(4).sname = 'Realign: Estimate & Reslice: Resliced Images (Sess 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(4).src_exbranch = substruct('.','val', '{}',{2}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(4).src_output = substruct('.','sess', '()',{1}, '.','rfiles');
 matlabbatch{8}.cfg_basicio.file_move.files(5) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(5).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(5).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(5).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(5).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(5).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(5).sname = 'VBM8: Estimate & Write: p1 Images';
-matlabbatch{8}.cfg_basicio.file_move.files(5).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(5).src_output = substruct('.','tiss', '()',{1}, '.','c', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(5).sname = 'Intra-subject bias correction: Bias corrected images (Subj 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(5).src_exbranch = substruct('.','val', '{}',{3}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(5).src_output = substruct('()',{1}, '.','files');
 matlabbatch{8}.cfg_basicio.file_move.files(6) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(6).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(6).tgt_spec{1}(1).name = 'filter';
-matlabbatch{8}.cfg_basicio.file_move.files(6).tgt_spec{1}(1).value = 'image';
+matlabbatch{8}.cfg_basicio.file_move.files(6).tgt_spec{1}(1).value = 'mat';
 matlabbatch{8}.cfg_basicio.file_move.files(6).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(6).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(6).sname = 'VBM8: Estimate & Write: p2 Images';
+matlabbatch{8}.cfg_basicio.file_move.files(6).sname = 'VBM8: Estimate & Write: Seg Params';
 matlabbatch{8}.cfg_basicio.file_move.files(6).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(6).src_output = substruct('.','tiss', '()',{2}, '.','c', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(6).src_output = substruct('.','param', '()',{':'});
 matlabbatch{8}.cfg_basicio.file_move.files(7) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(7).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(1).name = 'filter';
-matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(1).value = 'mat';
+matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(7).sname = 'VBM8: Estimate & Write: Seg Params';
-matlabbatch{8}.cfg_basicio.file_move.files(7).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(7).src_output = substruct('.','param', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(7).sname = 'VBM8: Estimate & Write: Deformation Field';
+matlabbatch{8}.cfg_basicio.file_move.files(7).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(7).src_output = substruct('()',{1}, '.','fordef', '()',{':'});
 matlabbatch{8}.cfg_basicio.file_move.files(8) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(8).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(8).tgt_spec{1}(1).name = 'filter';
@@ -209,7 +210,7 @@ matlabbatch{8}.cfg_basicio.file_move.files(8).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(8).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(8).tgt_spec{1}(2).value = 'e';
 matlabbatch{8}.cfg_basicio.file_move.files(8).sname = 'VBM8: Estimate & Write: p1 Images';
-matlabbatch{8}.cfg_basicio.file_move.files(8).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(8).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
 matlabbatch{8}.cfg_basicio.file_move.files(8).src_output = substruct('.','tiss', '()',{1}, '.','c', '()',{':'});
 matlabbatch{8}.cfg_basicio.file_move.files(9) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(9).tname = 'Files to move/copy/delete';
@@ -218,7 +219,7 @@ matlabbatch{8}.cfg_basicio.file_move.files(9).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(9).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(9).tgt_spec{1}(2).value = 'e';
 matlabbatch{8}.cfg_basicio.file_move.files(9).sname = 'VBM8: Estimate & Write: p2 Images';
-matlabbatch{8}.cfg_basicio.file_move.files(9).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(9).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
 matlabbatch{8}.cfg_basicio.file_move.files(9).src_output = substruct('.','tiss', '()',{2}, '.','c', '()',{':'});
 matlabbatch{8}.cfg_basicio.file_move.files(10) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(10).tname = 'Files to move/copy/delete';
@@ -226,16 +227,43 @@ matlabbatch{8}.cfg_basicio.file_move.files(10).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(10).tgt_spec{1}(1).value = 'mat';
 matlabbatch{8}.cfg_basicio.file_move.files(10).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(10).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(10).sname = 'Realign: Estimate: Realignment Param File (Sess 1)';
-matlabbatch{8}.cfg_basicio.file_move.files(10).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(10).src_output = substruct('.','sess', '()',{1}, '.','rpfile');
+matlabbatch{8}.cfg_basicio.file_move.files(10).sname = 'VBM8: Estimate & Write: Seg Params';
+matlabbatch{8}.cfg_basicio.file_move.files(10).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(10).src_output = substruct('.','param', '()',{':'});
 matlabbatch{8}.cfg_basicio.file_move.files(11) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(11).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(11).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(11).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(11).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(11).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(11).sname = 'Realign: Estimate: Realigned Images (Sess 1)';
-matlabbatch{8}.cfg_basicio.file_move.files(11).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(11).src_output = substruct('.','sess', '()',{1}, '.','cfiles');
-matlabbatch{8}.cfg_basicio.file_move.action.delete = false;
+matlabbatch{8}.cfg_basicio.file_move.files(11).sname = 'VBM8: Estimate & Write: p1 Images';
+matlabbatch{8}.cfg_basicio.file_move.files(11).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(11).src_output = substruct('.','tiss', '()',{1}, '.','c', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(12) = cfg_dep;
+matlabbatch{8}.cfg_basicio.file_move.files(12).tname = 'Files to move/copy/delete';
+matlabbatch{8}.cfg_basicio.file_move.files(12).tgt_spec{1}(1).name = 'filter';
+matlabbatch{8}.cfg_basicio.file_move.files(12).tgt_spec{1}(1).value = 'image';
+matlabbatch{8}.cfg_basicio.file_move.files(12).tgt_spec{1}(2).name = 'strtype';
+matlabbatch{8}.cfg_basicio.file_move.files(12).tgt_spec{1}(2).value = 'e';
+matlabbatch{8}.cfg_basicio.file_move.files(12).sname = 'VBM8: Estimate & Write: p2 Images';
+matlabbatch{8}.cfg_basicio.file_move.files(12).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(12).src_output = substruct('.','tiss', '()',{2}, '.','c', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(13) = cfg_dep;
+matlabbatch{8}.cfg_basicio.file_move.files(13).tname = 'Files to move/copy/delete';
+matlabbatch{8}.cfg_basicio.file_move.files(13).tgt_spec{1}(1).name = 'filter';
+matlabbatch{8}.cfg_basicio.file_move.files(13).tgt_spec{1}(1).value = 'mat';
+matlabbatch{8}.cfg_basicio.file_move.files(13).tgt_spec{1}(2).name = 'strtype';
+matlabbatch{8}.cfg_basicio.file_move.files(13).tgt_spec{1}(2).value = 'e';
+matlabbatch{8}.cfg_basicio.file_move.files(13).sname = 'Realign: Estimate: Realignment Param File (Sess 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(13).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(13).src_output = substruct('.','sess', '()',{1}, '.','rpfile');
+matlabbatch{8}.cfg_basicio.file_move.files(14) = cfg_dep;
+matlabbatch{8}.cfg_basicio.file_move.files(14).tname = 'Files to move/copy/delete';
+matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(1).name = 'filter';
+matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(1).value = 'image';
+matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(2).name = 'strtype';
+matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(2).value = 'e';
+matlabbatch{8}.cfg_basicio.file_move.files(14).sname = 'Realign: Estimate: Realigned Images (Sess 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(14).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(14).src_output = substruct('.','sess', '()',{1}, '.','cfiles');
+matlabbatch{8}.cfg_basicio.file_move.action.delete = true;
